WORDS=			\
	words.adj.1	\
	words.adj.2	\
	words.adj.3	\
	words.adv.1	\
	words.adv.2	\
	words.adv.3	\
	words.n.1	\
	words.n.2.s	\
	words.n.2.x	\
	words.n.3	\
	words.n.4	\
	words.n.c.1	\
	words.n.c.2	\
	words.n.p	\
	words.n.t	\
	words.s		\
	words.v.10.1	\
	words.v.10.2	\
	words.v.10.3	\
	words.v.10.4	\
	words.v.1.1	\
	words.v.1.2	\
	words.v.1.3	\
	words.v.1.4	\
	words.v.1.p	\
	words.v.2.1	\
	words.v.2.2	\
	words.v.2.3	\
	words.v.2.4	\
	words.v.2.5	\
	words.v.4.1	\
	words.v.4.2	\
	words.v.4.3	\
	words.v.4.4	\
	words.v.4.5	\
	words.v.5.1	\
	words.v.5.2	\
	words.v.5.3	\
	words.v.5.4	\
	words.v.6.1	\
	words.v.6.2	\
	words.v.6.3	\
	words.v.6.4	\
	words.v.6.5	\
	words.v.8.1	\
	words.v.8.2	\
	words.v.8.3	\
	words.v.8.4	\
	words.v.8.5	\
	words.y

wordsdir=$(pkgdatadir)/en/words
words_DATA = $(WORDS)

EXTRA_DIST = $(WORDS)
